--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <link href='projectn.css' rel='stylesheet' type='text/css'>
 <script defer src="project.js"></script>
-<a href="https://github.com/sam45643/Game-project8/upload/main">
+<a href="https://github.com/sam45643/Game-project8">
 <div class="grid">
   <div class="card">
     <span class="icon">
@@ -45,7 +45,7 @@
     </span>
     <h4>GITHUB</h4>
     <p>
-      ed.
+      Game Project
     </p>
     <div class="shine"></div>
     <div class="background">
@@ -70,7 +70,7 @@
     </div>
   </div>
 </a>
-<a href="https://github.com/sam45643/Game-project8/upload/main">
+<a href="https://github.com/sam45643/ROCK-PAPER-SCISSORSPOCKLIZARD/tree/main">
   <div class="grid">
     <div class="card">
       <span class="icon">
@@ -111,7 +111,7 @@
       </span>
       <h4>GITHUB</h4>
       <p>
-        ed.
+        ROCK PAPER SCISSOR SPOCK LIZARD Unity
       </p>
       <div class="shine"></div>
       <div class="background">
@@ -161,8 +161,9 @@
 </svg>
     </span>
     <h4>GITHUB</h4>
-    <p>
-      d.
+
+    <a href="https://github.com/sam45643/contact-page-html"<p>
+     Neon contact page that glow when hovered
     </p>
     <div class="shine"></div>
     <div class="background">
@@ -187,7 +188,7 @@
     </div>
   </div>
 </div>
-<div class="card">
+<div class="card"></a>
   <span class="icon"><?xml version="1.0" encoding="utf-8"?>
 
 <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
@@ -212,9 +213,10 @@
 </svg>
   </span>
   <h4>GITHUB</h4>
-  <p>
-    d.
+  <a href="https://github.com/sam45643/cis-class"<p>
+    Child class inheritance concept
   </p>
+</a>
   <div class="shine"></div>
   <div class="background">
     <div class="tiles">
