--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
       <div class="line line-3"></div>
     </div>
   </div>
-</div>
-<div class="card"></a>
+</div></a>
+<div class="card">
   <span class="icon"><?xml version="1.0" encoding="utf-8"?>
 
 <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
