--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
       </div>
     </div>
   </a>
-  <div class="card">
+  --
+ <div class="card">
     <span class="icon"><?xml version="1.0" encoding="utf-8"?>
 
 <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
@@ -160,9 +161,33 @@
 </g>
 </svg>
     </span>
-	  
---
- 
+    <h4>GITHUB</h4>
+    <p>
+       Inheritance class 
+    </p>
+    <div class="shine"></div>
+    <div class="background">
+      <div class="tiles">
+        <div class="tile tile-1"></div>
+        <div class="tile tile-2"></div>
+        <div class="tile tile-3"></div>
+        <div class="tile tile-4"></div>
+
+        <div class="tile tile-5"></div>
+        <div class="tile tile-6"></div>
+        <div class="tile tile-7"></div>
+        <div class="tile tile-8"></div>
+
+        <div class="tile tile-9"></div>
+        <div class="tile tile-10"></div>
+      </div>
+
+      <div class="line line-1"></div>
+      <div class="line line-2"></div>
+      <div class="line line-3"></div>
+    </div>
+  </div>
+</div>
        
 
 <!-- twitter -->
